@@ -5,6 +5,8 @@ import com.dreamypatisiel.devdevdev.domain.entity.SocialType;
 import com.dreamypatisiel.devdevdev.domain.entity.embedded.Email;
 import com.dreamypatisiel.devdevdev.domain.repository.MemberRepository;
 import com.dreamypatisiel.devdevdev.exception.MemberException;
+import com.dreamypatisiel.devdevdev.exception.TokenInvalidException;
+import com.dreamypatisiel.devdevdev.exception.TokenNotFoundException;
 import com.dreamypatisiel.devdevdev.global.common.TimeProvider;
 import com.dreamypatisiel.devdevdev.global.security.jwt.model.JwtClaimConstant;
 import com.dreamypatisiel.devdevdev.global.security.jwt.model.Token;
@@ -19,8 +21,6 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.oauth2.client.userinfo.OAuth2UserRequest;
-import org.springframework.security.oauth2.core.user.OAuth2User;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
@@ -29,9 +29,15 @@ import java.security.Key;
 import java.time.Instant;
 import java.util.Arrays;
 import java.util.Date;
-import java.util.Map;
+import java.util.List;
+
+import static com.dreamypatisiel.devdevdev.exception.TokenInvalidException.REFRESH_TOKEN_INVALID_EXCEPTION_MESSAGE;
+import static com.dreamypatisiel.devdevdev.exception.TokenNotFoundException.TOKEN_NOT_FOUND_EXCEPTION_MESSAGE;
+import static com.dreamypatisiel.devdevdev.global.security.jwt.model.TokenExpireTime.ACCESS_TOKEN_EXPIRE_TIME;
+import static com.dreamypatisiel.devdevdev.global.security.jwt.model.TokenExpireTime.REFRESH_TOKEN_EXPIRE_TIME;
 
 /**
+ * JWT의 생성과 인증, 인가를 담당하는 책임을 가진 클래스
  * 토큰 생성, 검증, 쿠키에서 토큰 추출, 클레임 추출
  */
 @Slf4j
@@ -41,16 +47,10 @@ public class TokenService implements InitializingBean {
 
     private static final String BEARER_PREFIX = "Bearer ";
     private static final String AUTHORIZATION_HEADER = "Authorization";
-    private final static String KAKAO_ACCOUNT = "kakao_account";
 
     @Value("${jwt.secret}")
     private String secret;
 
-    @Value("${jwt.expiration.refresh}")
-    private long accessTokenValidityInMilliseconds;
-
-    @Value("${jwt.expiration.access}")
-    private long refreshTokenValidityInMilliseconds;
     private Key key;
 
     private final TimeProvider timeProvider;
@@ -66,24 +66,18 @@ public class TokenService implements InitializingBean {
     /**
      * 토큰 발급
      */
-    @SuppressWarnings("unchecked")
     @Transactional
-    public Token generateToken(OAuth2User oAuth2User) {
+    public Token generateToken(String email, String socialType) {
 
-        Map<String, Object> kakaoAccountAttributes = (Map<String, Object>) (oAuth2User.getAttributes().get(KAKAO_ACCOUNT));
-        String email = kakaoAccountAttributes.get(JwtClaimConstant.email).toString();
-//        String socialType = oAuth2UserRequest.getClientRegistration().getRegistrationId();
-        //String socialType = kakaoAccountAttributes.get(JwtClaimConstant.socialType).toString();
-
-        Claims claims = Jwts.claims()
-                .setSubject(email);
-        claims.put("role", "USER");
+        Claims claims = Jwts.claims().setSubject(email);
+        claims.put(JwtClaimConstant.email, email);
+        claims.put(JwtClaimConstant.socialType, socialType);
+        claims.put(JwtClaimConstant.role, "ROLE_USER");
 
         String accessToken = createAccessToken(claims);
         String refreshToken = createRefreshToken(claims);
 
-        Member findMember = memberRepository.findMemberByEmailAndSocialType(new Email(email),
-                        SocialType.KAKAO)
+        Member findMember = memberRepository.findMemberByEmailAndSocialType(new Email(email), SocialType.valueOf(socialType))
                 .orElseThrow(() -> new MemberException(MemberException.INVALID_MEMBER_NOT_FOUND_MESSAGE));
         findMember.updateRefreshToken(refreshToken);
 
@@ -94,7 +88,7 @@ public class TokenService implements InitializingBean {
         return Jwts.builder()
                 .setClaims(claims)
                 .setIssuedAt(timeProvider.getDateNow())
-                .setExpiration(new Date(timeProvider.getDateNow().getTime() + refreshTokenValidityInMilliseconds))
+                .setExpiration(new Date(timeProvider.getDateNow().getTime() + REFRESH_TOKEN_EXPIRE_TIME))
                 .signWith(key, SignatureAlgorithm.HS256)
                 .compact();
     }
@@ -103,7 +97,7 @@ public class TokenService implements InitializingBean {
         return Jwts.builder()
                 .setClaims(claims)
                 .setIssuedAt(timeProvider.getDateNow())
-                .setExpiration(new Date(timeProvider.getDateNow().getTime() + accessTokenValidityInMilliseconds))
+                .setExpiration(new Date(timeProvider.getDateNow().getTime() + ACCESS_TOKEN_EXPIRE_TIME))
                 .signWith(key, SignatureAlgorithm.HS256)
                 .compact();
     }
@@ -115,72 +109,77 @@ public class TokenService implements InitializingBean {
                 .signWith(key, SignatureAlgorithm.HS256).compact();
     }
 
-    public Authentication getAuthentication(String accessToken) {
-        Claims claims = parseClaims(accessToken);
-        String email = claims.getSubject();
-//        log.info("Authenticated Member Id:" + String.valueOf(memberId));
-        return new UsernamePasswordAuthenticationToken(email, "",
-                Arrays.asList(new SimpleGrantedAuthority("USER")));
+    public Authentication getAuthentication(String token) {
+        String email = getEmail(token);
+        String socialType = getSocialType(token);
+
+        return new UsernamePasswordAuthenticationToken(email, null,
+                List.of(new SimpleGrantedAuthority("ROLE_USER")));
     }
 
-//    @Deprecated
-    public String resolveToken(HttpServletRequest request) {
+    public String resolveToken(HttpServletRequest request) throws TokenInvalidException {
         String bearerToken = request.getHeader(AUTHORIZATION_HEADER);
-        if (StringUtils.hasText(bearerToken) && bearerToken.startsWith(BEARER_PREFIX)) {
-            return bearerToken.substring(BEARER_PREFIX.length());
+        if (!StringUtils.hasText(bearerToken) || !bearerToken.startsWith(BEARER_PREFIX)) {
+            // throw new TokenNotFoundException(TOKEN_NOT_FOUND_EXCEPTION_MESSAGE);
+            return null;
         }
-        return null;
+        return bearerToken.substring(BEARER_PREFIX.length());
+    }
+
+    public boolean validateToken(String token) throws TokenInvalidException {
+        if(!StringUtils.hasText(token)) {
+//            throw new TokenNotFoundException(TOKEN_NOT_FOUND_EXCEPTION_MESSAGE);
+            return false;
+        }
+        try {
+            Jwts.parserBuilder().setSigningKey(key).build().parseClaimsJws(token);
+            return true;
+        } catch (io.jsonwebtoken.security.SecurityException | MalformedJwtException e) {
+//            throw new TokenInvalidException("잘못된 jwt 서명을 가진 토큰입니다");
+        } catch (ExpiredJwtException e) {
+//            throw new TokenInvalidException("만료된 jwt 토큰입니다");
+        } catch (UnsupportedJwtException e) {
+//            throw new TokenInvalidException("지원하지 않는 jwt 토큰입니다");
+        } catch (IllegalArgumentException e) {
+//            throw new TokenInvalidException("잘못된 jwt 토큰입니다");
+        }
+        return false;
     }
 
     private Claims parseClaims(String accessToken) {
         try {
             return Jwts.parserBuilder().setSigningKey(key).build().parseClaimsJws(accessToken).getBody();
         } catch (ExpiredJwtException e) {
-            // ???
             return e.getClaims();
         }
     }
 
-    /**
-     *
-     */
-    public void validateRefreshToken(String refreshToken) {
-        boolean isValidToken = validateToken(refreshToken);
-        if (!isValidToken) {
-            throw new JwtException("유효하지 않은 리프레시 토큰 입니다.");
+    public void validateRefreshToken(String refreshToken) throws TokenInvalidException {
+        try {
+            validateToken(refreshToken);
+        } catch (TokenInvalidException e){
+            throw new TokenInvalidException(REFRESH_TOKEN_INVALID_EXCEPTION_MESSAGE);
         }
 
-        Claims claims = parseClaims(refreshToken);
-        String email = claims.get(JwtClaimConstant.email).toString();
-        String socialType = claims.get(JwtClaimConstant.socialType).toString();
+        String email = getEmail(refreshToken);
+        String socialType = getSocialType(refreshToken);
 
         Member findMember = memberRepository.findMemberByEmailAndSocialType(new Email(email), SocialType.valueOf(socialType))
                 .orElseThrow(() -> new MemberException(MemberException.INVALID_MEMBER_NOT_FOUND_MESSAGE));
 
         boolean isEqualsRefreshToken = findMember.isRefreshTokenEquals(refreshToken);
         if(!isEqualsRefreshToken) {
-            // 로그아웃(+쿠키 삭제)
-            throw new JwtException("확인되지 않은 리프레시 토큰 입니다.");
+            throw new TokenInvalidException(REFRESH_TOKEN_INVALID_EXCEPTION_MESSAGE);
         }
     }
 
-    public boolean validateToken(String token) {
-        if(!StringUtils.hasText(token)) {
-            return false;
-        }
+    public String getSocialType(String token) {
+        Claims claims = parseClaims(token);
+        return claims.get(JwtClaimConstant.socialType).toString();
+    }
 
-        try {
-            Jwts.parserBuilder().setSigningKey(key).build().parseClaimsJws(token);
-            return true;
-        } catch (io.jsonwebtoken.security.SecurityException | MalformedJwtException e) {
-            log.error("잘못된 jwt 서명을 가진 토큰입니다", e);
-        } catch (ExpiredJwtException e) {
-            log.error("만료된 jwt 토큰입니다", e);
-        } catch (UnsupportedJwtException e) {
-            log.error("지원하지 않는 jwt 토큰입니다", e);
-        } catch (IllegalArgumentException e) {
-            log.error("잘못된 jwt 토큰입니다", e);
-        }
-        return false;
+    public String getEmail(String token) {
+        Claims claims = parseClaims(token);
+        return claims.get(JwtClaimConstant.email).toString();
     }
 }
